--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,10 @@ matrix:
       dist: xenial
     - name: "Python 3.6 on Windows"
       os: windows
+      python: 3.6
       language: shell
       before_install: choco install python
-      env: PATH=/c/Python36/:/c/Python37/Scripts:$PATH
+      env: PATH=/c/Python36/:/c/Python36/Scripts:$PATH
 # command to install dependencies
 install: pip install -r requirements.txt
 # command to run tests
