--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ matrix:
       os: windows
       python: 3.6
       language: shell
-      before_install: choco install python
+      before_install: choco install python --version 3.6.8
       env: PATH=/c/Python36/:/c/Python36/Scripts:$PATH
 # command to install dependencies
 install: pip install -r requirements.txt
