--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ matrix:
     - name: "Python 3.6 on Linux"
       python: 3.6
       dist: xenial
+      before_install: apt-get install python-pyaudio
     - name: "Python 3.6 on Windows"
       os: windows
       python: 3.6
